test/good/nullables/assert01.px

Int? x
x = null
x = 10
Int x' = x!
print x'
