test/bad/nullables/op05.px

Int? x = null
x ??= 4.2
